# wechat_dll_rs

./: .gitignore  Cargo.toml  README.md  WeChat.ct  new.ct
src/: lib.rs
src/data/: detail.rs  mod.rs
src/helper/: addr.rs  agree_friend.rs  mod.rs  read.rs  time.rs
src/hook/: check_login.rs  edit_remaker.rs  hook_anywhere.rs  image_sender.rs  mod.rs  msg_receive_asm.rs  msg_sender.rs  multiple_wx.rs  read_info_by_wxid.rs
