[package]
name = "wechat_count_dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "wxc"
crate-type = ["dylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
detour = "0.8.0"
rand = "0.8.5"
regex = "1"
once_cell = "1.15.0"
kernel32-sys = "0.2.1"
actix = "0.13.0"
chrono = "0.4"

env_logger = "0.9"
log = "0.4"

widestring = "1.0.2"
base64 = "0.21.0"

[dependencies.winapi]
version = "^0.3.9"
features = [
    "memoryapi",
    "minwindef",
    "ntdef",
    "winuser",
    "tlhelp32",
    "psapi",
    "securitybaseapi",
    "libloaderapi",
    "synchapi",
    "wow64apiset",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "impl-default"
]


[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
